# ppsc-build

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
benches/: codegen_benchmark.rs  prost_benchmark.rs
benches/tmp/: network.protocol.rs
src/: ast.rs  code_generator.rs  collections.rs  config.rs  context.rs  extern_paths.rs  lib.rs  message_graph.rs
src/fixtures/alphabet/: _expected_include.rs
src/fixtures/field_attributes/: _expected_field_attributes.rs
src/fixtures/network_protocol/: _expected_network_protocol.rs  network_protocol.proto
src/fixtures/tutorial/: _expected_tutorial.rs  tutorial.proto
