[package]
name = "ppsc-build"
version = "0.1.0"
edition = "2024"

[dependencies]
heck = "0.5.0"
itertools = "0.14.0"
log = "0.4.26"
multimap = "0.10.0"
once_cell = "1.21.1"
petgraph = "0.7.1"
prost = "0.13.5"
prost-build = "0.13.5"
prost-types = "0.13.5"
protox = "0.7.2"
regex = "1.11.1"
tempfile = "3.19.0"
