[package]
name = "ppsc-build"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Protocol Buffers Parity SCALE Codec Generator"
repository = "https://github.com/shritesh/ppsc-build"
documentation = "https://docs.rs/ppsc-build"
readme = "README.md"
keywords = ["protobuf", "prost", "scale", "codec", "parity"]
categories = ["encoding", "development-tools::build-utils"]

[dependencies]
heck = "0.5.0"
itertools = "0.14.0"
libc-print = "0.1.23"
log = "0.4.26"
multimap = "0.10.0"
once_cell = "1.21.1"
petgraph = "0.7.1"
prost = "0.13.5"
prost-build = "0.13.5"
prost-types = "0.13.5"
protox = "0.7.2"
regex = "1.11.1"
tempfile = "3.19.0"

[build-dependencies]
prost-build = "0.13.5"
tempfile = "3.19.0"

[dev-dependencies]
criterion = "0.5"
parity-scale-codec = { version = "3.6.5", features = ["derive"] }

[[bench]]
name = "codegen_benchmark"
harness = false

[[bench]]
name = "prost_benchmark"
harness = false
